--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,43 @@ body {
     min-height: 92px;
     flex-shrink: 0;
 }
+
+.search-container {
+    padding: 20px;
+    max-height: 160px;
+}
+
+.search-icon {
+    height: 20px;
+    width: auto;
+}
+
+.voice-icon {
+    height: 24px;
+    width: auto;
+}
+
+input {
+    border-width: 0px !important;
+    border: none !important;
+}
+
+.search-box {
+    width: auto;
+    max-width: 584px;
+    height: 44px;
+}
+
+.search-buttons {
+    height: 36px !important;
+    background-color: #f8f9fa !important;
+    color: #3c4043 !important;
+}
+
+@media (max-width: 1200px){
+    .carbon-neutral {
+        order: 0 !important;
+        width: 100%;
+        justify-content: center;
+    }
+}
