--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,10 @@ body {
 }
 
 .bottom-bar {
-    color: #70757a;
-    background-color: #f2f2f2;
-    text-decoration: none;
-    white-space: nowrap;
+    color: #70757a !important;
+    background-color: #f2f2f2 !important;
+    text-decoration: none !important;
+    white-space: nowrap !important;
 }
 
 .google-logo {
@@ -98,6 +98,9 @@ input {
     .carbon-neutral {
         order: 0 !important;
         width: 100%;
-        justify-content: center;
     }
+}
+
+.empty {
+    min-height: 50px !important;
 }
